Lab 3/y.output
Terminals unused in grammar

   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT


State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 variable: ID
   36         | ID LTHIRD expression RTHIRD

   37 expression: logic_expression
   38           | variable ASSIGNOP logic_expression

   39 logic_expression: rel_expression
   40                 | rel_expression LOGICOP rel_expression

   41 rel_expression: simple_expression
   42               | simple_expression RELOP simple_expression

   43 simple_expression: term
   44                  | simple_expression ADDOP term

   45 term: unary_expression
   46     | term MULOP unary_expression

   47 unary_expression: ADDOP unary_expression
   48                 | NOT unary_expression
   49                 | factor

   50 factor: variable
   51       | ID LPAREN argument_list RPAREN
   52       | LPAREN expression RPAREN
   53       | CONST_INT
   54       | CONST_FLOAT
   55       | variable INCOP
   56       | variable DECOP

   57 argument_list: arguments
   58              | /* empty */

   59 arguments: arguments COMMA logic_expression
   60          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 28 29
ELSE (259) 29
FOR (260) 27
INT (261) 15
FLOAT (262) 16
VOID (263) 17
ID (264) 6 7 8 10 18 19 20 21 31 35 36 51
CONST_INT (265) 19 21 53
CONST_FLOAT (266) 54
ADDOP (267) 44 47
MULOP (268) 46
RELOP (269) 42
LOGICOP (270) 40
ASSIGNOP (271) 38
LTHIRD (272) 19 21 36
RTHIRD (273) 19 21 36
LPAREN (274) 6 7 27 28 29 30 31 51 52
RPAREN (275) 6 7 27 28 29 30 31 51 52
LCURL (276) 12 13
RCURL (277) 12 13
SEMICOLON (278) 14 31 32 33 34
INCOP (279) 55
DECOP (280) 56
PRINTLN (281) 31
RETURN (282) 32
NOT (283) 48
COMMA (284) 8 9 18 19 59
WHILE (285) 30
DO (286)
BREAK (287)
CONTINUE (288)
CHAR (289)
DOUBLE (290)
SWITCH (291)
CASE (292)
DEFAULT (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
start (40)
    on left: 1, on right: 0
program (41)
    on left: 2 3, on right: 1 2
unit (42)
    on left: 4 5, on right: 2 3
func_definition (43)
    on left: 6 7, on right: 5
parameter_list (44)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (45)
    on left: 12 13, on right: 6 7 26
var_declaration (46)
    on left: 14, on right: 4 24
type_specifier (47)
    on left: 15 16 17, on right: 6 7 8 9 10 11 14
declaration_list (48)
    on left: 18 19 20 21, on right: 14 18 19
statements (49)
    on left: 22 23, on right: 12 23
statement (50)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 27 28 29 30
expression_statement (51)
    on left: 33 34, on right: 25 27
variable (52)
    on left: 35 36, on right: 38 50 55 56
expression (53)
    on left: 37 38, on right: 27 28 29 30 32 34 36 52
logic_expression (54)
    on left: 39 40, on right: 37 38 59 60
rel_expression (55)
    on left: 41 42, on right: 39 40
simple_expression (56)
    on left: 43 44, on right: 41 42 44
term (57)
    on left: 45 46, on right: 43 44 46
unary_expression (58)
    on left: 47 48 49, on right: 45 46 47 48
factor (59)
    on left: 50 51 52 53 54 55 56, on right: 49
argument_list (60)
    on left: 57 58, on right: 51
arguments (61)
    on left: 59 60, on right: 57 59


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 14
    LPAREN  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   18 declaration_list: declaration_list . COMMA ID
   19                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 16
    COMMA      shift, and go to state 17


State 14

   21 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 18


State 15

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 19

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 17

   18 declaration_list: declaration_list COMMA . ID
   19                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

   21 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 23


State 19

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 24

    compound_statement  go to state 25


State 20

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 28

    $default  reduce using rule 11 (parameter_list)


State 22

   18 declaration_list: declaration_list COMMA ID .
   19                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


State 23

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 24

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 37
    SEMICOLON    shift, and go to state 38
    PRINTLN      shift, and go to state 39
    RETURN       shift, and go to state 40
    NOT          shift, and go to state 41
    WHILE        shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statements            go to state 46
    statement             go to state 47
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 25

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 26

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 24

    compound_statement  go to state 57


State 27

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 28

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 29

   19 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 31

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


State 32

   35 variable: ID .
   36         | ID . LTHIRD expression RTHIRD
   51 factor: ID . LPAREN argument_list RPAREN

    LTHIRD  shift, and go to state 62
    LPAREN  shift, and go to state 63

    $default  reduce using rule 35 (variable)


State 33

   53 factor: CONST_INT .

    $default  reduce using rule 53 (factor)


State 34

   54 factor: CONST_FLOAT .

    $default  reduce using rule 54 (factor)


State 35

   47 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable          go to state 64
    unary_expression  go to state 65
    factor            go to state 56


State 36

   52 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 49
    expression         go to state 66
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 37

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 38

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


State 39

   31 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 67


State 40

   32 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 49
    expression         go to state 68
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 41

   48 unary_expression: NOT . unary_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable          go to state 64
    unary_expression  go to state 69
    factor            go to state 56


State 42

   30 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 70


State 43

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


State 44

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


State 45

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


State 46

   12 compound_statement: LCURL statements . RCURL
   23 statements: statements . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 38
    PRINTLN      shift, and go to state 39
    RETURN       shift, and go to state 40
    NOT          shift, and go to state 41
    WHILE        shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 73
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 47

   22 statements: statement .

    $default  reduce using rule 22 (statements)


State 48

   25 statement: expression_statement .

    $default  reduce using rule 25 (statement)


State 49

   38 expression: variable . ASSIGNOP logic_expression
   50 factor: variable .
   55       | variable . INCOP
   56       | variable . DECOP

    ASSIGNOP  shift, and go to state 74
    INCOP     shift, and go to state 75
    DECOP     shift, and go to state 76

    $default  reduce using rule 50 (factor)


State 50

   34 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 51

   37 expression: logic_expression .

    $default  reduce using rule 37 (expression)


State 52

   39 logic_expression: rel_expression .
   40                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 78

    $default  reduce using rule 39 (logic_expression)


State 53

   41 rel_expression: simple_expression .
   42               | simple_expression . RELOP simple_expression
   44 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 79
    RELOP  shift, and go to state 80

    $default  reduce using rule 41 (rel_expression)


State 54

   43 simple_expression: term .
   46 term: term . MULOP unary_expression

    MULOP  shift, and go to state 81

    $default  reduce using rule 43 (simple_expression)


State 55

   45 term: unary_expression .

    $default  reduce using rule 45 (term)


State 56

   49 unary_expression: factor .

    $default  reduce using rule 49 (unary_expression)


State 57

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 58

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 82

    $default  reduce using rule 9 (parameter_list)


State 59

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 83


State 60

   28 statement: IF LPAREN . expression RPAREN statement
   29          | IF LPAREN . expression RPAREN statement ELSE statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 49
    expression         go to state 84
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 61

   27 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    SEMICOLON    shift, and go to state 38
    NOT          shift, and go to state 41

    expression_statement  go to state 85
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 62

   36 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 49
    expression         go to state 86
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 63

   51 factor: ID LPAREN . argument_list RPAREN

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    $default  reduce using rule 58 (argument_list)

    variable           go to state 64
    logic_expression   go to state 87
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56
    argument_list      go to state 88
    arguments          go to state 89


State 64

   50 factor: variable .
   55       | variable . INCOP
   56       | variable . DECOP

    INCOP  shift, and go to state 75
    DECOP  shift, and go to state 76

    $default  reduce using rule 50 (factor)


State 65

   47 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 47 (unary_expression)


State 66

   52 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 90


State 67

   31 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 91


State 68

   32 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 92


State 69

   48 unary_expression: NOT unary_expression .

    $default  reduce using rule 48 (unary_expression)


State 70

   30 statement: WHILE LPAREN . expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 49
    expression         go to state 93
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 71

   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 14

    $default  reduce using rule 20 (declaration_list)


State 72

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


State 73

   23 statements: statements statement .

    $default  reduce using rule 23 (statements)


State 74

   38 expression: variable ASSIGNOP . logic_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 64
    logic_expression   go to state 94
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 75

   55 factor: variable INCOP .

    $default  reduce using rule 55 (factor)


State 76

   56 factor: variable DECOP .

    $default  reduce using rule 56 (factor)


State 77

   34 expression_statement: expression SEMICOLON .

    $default  reduce using rule 34 (expression_statement)


State 78

   40 logic_expression: rel_expression LOGICOP . rel_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 64
    rel_expression     go to state 95
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 79

   44 simple_expression: simple_expression ADDOP . term

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable          go to state 64
    term              go to state 96
    unary_expression  go to state 55
    factor            go to state 56


State 80

   42 rel_expression: simple_expression RELOP . simple_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 64
    simple_expression  go to state 97
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 81

   46 term: term MULOP . unary_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable          go to state 64
    unary_expression  go to state 98
    factor            go to state 56


State 82

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)


State 83

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 19 (declaration_list)


State 84

   28 statement: IF LPAREN expression . RPAREN statement
   29          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 85

   27 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    SEMICOLON    shift, and go to state 38
    NOT          shift, and go to state 41

    expression_statement  go to state 100
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 86

   36 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 101


State 87

   60 arguments: logic_expression .

    $default  reduce using rule 60 (arguments)


State 88

   51 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 102


State 89

   57 argument_list: arguments .
   59 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 103

    $default  reduce using rule 57 (argument_list)


State 90

   52 factor: LPAREN expression RPAREN .

    $default  reduce using rule 52 (factor)


State 91

   31 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 104


State 92

   32 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 32 (statement)


State 93

   30 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 105


State 94

   38 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 38 (expression)


State 95

   40 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 40 (logic_expression)


State 96

   44 simple_expression: simple_expression ADDOP term .
   46 term: term . MULOP unary_expression

    MULOP  shift, and go to state 81

    $default  reduce using rule 44 (simple_expression)


State 97

   42 rel_expression: simple_expression RELOP simple_expression .
   44 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 79

    $default  reduce using rule 42 (rel_expression)


State 98

   46 term: term MULOP unary_expression .

    $default  reduce using rule 46 (term)


State 99

   28 statement: IF LPAREN expression RPAREN . statement
   29          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 38
    PRINTLN      shift, and go to state 39
    RETURN       shift, and go to state 40
    NOT          shift, and go to state 41
    WHILE        shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 106
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 100

   27 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 49
    expression         go to state 107
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 101

   36 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 36 (variable)


State 102

   51 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 51 (factor)


State 103

   59 arguments: arguments COMMA . logic_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    NOT          shift, and go to state 41

    variable           go to state 64
    logic_expression   go to state 108
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 104

   31 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 109


State 105

   30 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 38
    PRINTLN      shift, and go to state 39
    RETURN       shift, and go to state 40
    NOT          shift, and go to state 41
    WHILE        shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 110
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 106

   28 statement: IF LPAREN expression RPAREN statement .
   29          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 111

    ELSE      [reduce using rule 28 (statement)]
    $default  reduce using rule 28 (statement)


State 107

   27 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 112


State 108

   59 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 59 (arguments)


State 109

   31 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 31 (statement)


State 110

   30 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 30 (statement)


State 111

   29 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 38
    PRINTLN      shift, and go to state 39
    RETURN       shift, and go to state 40
    NOT          shift, and go to state 41
    WHILE        shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 113
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 112

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 38
    PRINTLN      shift, and go to state 39
    RETURN       shift, and go to state 40
    NOT          shift, and go to state 41
    WHILE        shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 114
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 113

   29 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 29 (statement)


State 114

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 27 (statement)
